--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
  <!doctype html>
 <html lang="en">
   <head>
+    <!-- Montserrat font import -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
