feat(theme): implement Void/Carbon OS aesthetic with system indicators
- Refactor Experience and Education cards to use OS-style window headers
- Replace generic folder icons with specific icons (Briefcase, GraduationCap)
- Update font stack to Plus Jakarta Sans and JetBrains Mono
- Add 'System Online' status indicator to Tech Stack
- Implement new 'System Ready' footer component
- Standardize window header spacing and typography
- Remove redundant inner titles and icons from cards
- Switch package manager lockfile to bun.lock

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Montserrat font import -->
+    <!-- Plus Jakarta Sans & JetBrains Mono font import -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
